Delmar/force-app/main/default/objects/DEL_CaseCollaborator__c/DEL_CaseCollaborator__c.object-meta.xml
<CustomObject>
    <label>Case Collaborator</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Case Collaborator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Collaborators</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>