Delmar/force-app/main/default/objects/DEL_CaseCollaborator__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Collaborators</relationshipLabel>
    <relationshipName>Case_Collaborators</relationshipName>
    <type>Lookup</type>
</CustomField>