Delmar/force-app/main/default/objects/DEL_CaseCollaborator__c/fields/CaseUrl__c.field-meta.xml
<CustomField>
    <fullName>CaseUrl__c</fullName>
    <description>Case detail link of the associated Case.</description>
    <label>Case URL</label>
    <type>Url</type>
</CustomField>