Delmar/force-app/main/default/objects/DEL_CaseCollaborator__c/validationRules/RestrictCaseCreatedBy.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictCaseCreatedBy</fullName>
    <active>true</active>
    <description>Cannot collaborate with Case CreatedBy Users</description>
    <errorConditionFormula>IF((Case__r.CreatedBy.Id  = User__r.Id ), TRUE,FALSE)</errorConditionFormula>
    <errorMessage>Cannot collaborate with Case CreatedBy Users</errorMessage>
</ValidationRule>