Delmar/force-app/main/default/objects/DEL_CaseCollaborator__c/validationRules/RestrictCaseOwnerAsCollaborator.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictCaseOwnerAsCollaborator</fullName>
    <active>true</active>
    <description>Case Owner cannot add themselves as Case Collaborators.</description>
    <errorConditionFormula>IF(( Case__r.OwnerId  =  User__r.Id ), TRUE,FALSE)</errorConditionFormula>
    <errorMessage>Case Owner cannot add themselves as Case Collaborators.</errorMessage>
</ValidationRule>